# API-Switch

./: .gitignore  AGENTS.md  BUG.MD  GUIDE.md  GUIDE_CN.md  PLAN.md  PROTOCOL_ENVELOPE_DESIGN.md  README.md  README_CN.md  REFACTOR_PLAN.md  TODO.md  WEB_ADMIN_PLAN.md  WHITEPAPER.md  azure_openai_reference.html  azure_openai_reference.md  azure_responses.html  azure_responses.md  link.json  openai_chat_ref.html  openai_docs_response.html  package.json  skills-lock.json  vite.config.web.ts
.github/workflows/: release.yml
.sisyphus/plans/: web-admin-phase2-phase3-detailed.md
docs/: connection-apps.md  disable_keywords.md  global-disable-reasoning-plan.md  openai-reasoning-analysis.md
scripts/: bump-version.cjs
src/: App.tsx  index.css  index.html  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: backup.rs  data_dir.rs  dirty.rs  error.rs  event.rs  lib.rs  main.rs  runtime_mode.rs  runtime_plan.rs  state_version.rs  tray_refresh.rs
src-tauri/src/admin/: auth.rs  channel_handlers.rs  connection_apps_handlers.rs  cors.rs  error.rs  handlers.rs  import_export_handlers.rs  mod.rs  pool_handlers.rs  proxy_handlers.rs  router.rs  state.rs  static_files.rs
src-tauri/src/commands/: admin_cmd.rs  channel.rs  config.rs  connection_apps.rs  dirty_cmds.rs  import_export.rs  mod.rs  pool.rs  proxy_cmd.rs  test_chat.rs  token.rs  usage.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/database/dao/: access_key_dao.rs  api_entry_dao.rs  channel_dao.rs  config_dao.rs  import_export_dao.rs  mod.rs  usage_dao.rs
src-tauri/src/proxy/: forwarder.rs  handlers.rs  middleware.rs  mod.rs  responses_handler.rs  router.rs  server.rs  sse.rs
src-tauri/src/proxy/protocol/: azure.rs  claude.rs  claude_output.rs  gemini.rs  gemini_output.rs  mod.rs  openai.rs  responses.rs  roundtrip_tests.rs
src-tauri/src/server_api/: channel.rs  config.rs  mod.rs  pool.rs  proxy.rs  token.rs
src-tauri/src/services/: channel_service.rs  import_export_service.rs  log_service.rs  mod.rs  pool_service.rs  response_validation.rs  token_service.rs
src/components/: ErrorBoundary.tsx  LoginScreen.tsx
src/components/proxy/: ProxyToggle.tsx
src/components/ui/: dialog.tsx
src/features/channels/: ChannelFormDialog.tsx  ChannelList.tsx  ChannelManager.tsx  ModelSelectionDialog.tsx  channelErrors.ts  channelHooks.ts  types.ts
src/features/channels/editor/: ChannelEditorDialog.tsx  types.ts
src/features/groups/: GroupManagement.tsx
src/features/logs/: LogViewer.tsx
src/features/pool/: PoolManager.tsx
src/features/settings/: SettingsEditor.tsx
src/features/shell/: MainShell.tsx
src/features/tokens/: TokenManager.tsx
src/features/translator/: TranslationRelayPanel.tsx
src/i18n/locales/: en.json  zh.json
src/lib/: adminApiConfig.ts  apiAdapter.ts  events.ts  modelsCatalog.ts  tauriApiAdapter.ts  translation.ts  unifiedApiAdapter.ts  useApiAdapter.ts  useTauriEvent.ts  webAdminApiAdapter.ts  webAuth.ts
src/pages/: ApiPoolPage.tsx  ChannelPage.tsx  CliPage.tsx  DashboardPage.tsx  GroupManagementPage.tsx  LogPage.tsx  SettingsPage.tsx  TokenPage.tsx
src/stubs/: tauri-app.ts  tauri-core.ts  tauri-opener.ts
src/web-admin/: index.html  vite.config.ts
src/web-admin/src/: api.ts
