[package]
name = "api-switch"
version = "0.6.26"
description = "Personal API Management & Forwarding Center"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "0.6.26"

[lib]
name = "api_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "0.6.26", features = [] }

[dependencies]
tauri = { version = "0.6.26"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "0.6.26"] }
serde_json = { version = "0.6.26"] }
log = "0.4"
chrono = { version = "0.6.26"] }
tokio = { version = "0.6.26"] }
futures = "0.3"
bytes = "1.5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6.26"] }
hyper = { version = "0.6.26"] }
hyper-util = { version = "0.6.26"] }
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.6.26"] }
rusqlite = { version = "0.6.26"] }
uuid = { version = "0.6.26"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"
regex = "1.10"
auto-launch = "0.5"
url = "2.5"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
