[package]
name = "api-switch"
version = "0.7.55"
description = "Personal API Management & Forwarding Center"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "api_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = ["core"]
core = []
gui = ["core", "dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]
desktop = ["gui", "tray", "dep:tauri-plugin-process", "dep:auto-launch"]
mobile = ["gui"]
tray = ["gui", "tauri/tray-icon"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
futures = "0.3"
bytes = "1.5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"
regex = "1.10"
auto-launch = { version = "0.5", optional = true }
url = "2.5"
include_dir = "0.7"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
